--- a/index.html
+++ b/index.html
@@ -10,27 +10,35 @@
 <body>
     <div class="main-grid">
         <header>
-            <img src="img/mello.png" alt="logo">
+            <img src="img/mello.png" class="logo" alt="logo">
             <nav class="nav">
-                <a href="#" class="nav__link"></a>
-                <a href="#" class="nav__link"></a>
-                <a href="#" class="nav__link"></a>
-                <a href="#" class="nav__link"></a>
+                <a href="#" class="nav__link">Contact</a>
+                <a href="#" class="nav__link">Book</a>
+                <a href="#" class="nav__link">Info</a>
+                <a href="#" class="nav__link">About Us</a>
             </nav>
         </header>
 
         <main>
             <h1 class="title">The Mirrorcube</h1>
             <p class="location">Sweden Lapponia</p>
-            <img src="img/mirrorcube.jpg" alt="" class="primary-image">
-            <div class="secondary-images">
-                <img src="img/mirrorcubeinsed2.jpg" alt="" class="secondary-image">
-                <img src="img/mirrorcube3.jpg" alt="" class="secondary-image">
+            <div class="container">
+                <div class="gallery">
+                    <figure class="gallery-item gallery__item--1">
+                    <img src="img/mirrorcube3.jpg" alt="image 1" class="gallery-image">
+                    </figure>
+                    <figure class="gallery-item gallery__item--2"">
+                    <img src="img/mirrorcubeinsed2.jpg" alt="image 2" class="gallery-image">
+                    </figure>
+                    <figure class="gallery-item gallery__item--3">
+                    <img src="img/mirrorcube.jpg" alt="image 3" class="gallery-image">
+                    </figure>
+                </div>
             </div>
             <p class="description">
                 In northern Sweden you find this amazing building called "the cube" made entirely in glas. It is part of the Hotel which has a couple of uniqally designed rental apartments in the middle of Lapponia wilderness. 
             </p>
-            <button class="btn"></button>
+            <button class="btn">Book here</button>
         </main>
 
         <footer>
